신규 스프레드시트 수정사항(1, 39) (#428)
* 로그인 시 사이트정보 세션에 저장하던부분 분리

로그인 시 사이트정보 세션에 저장하던부분 분리

* 네비게이션 작업을 위해서 preHandler에서 사이트정보 불러와서 세팅을 한다.

네비게이션 작업을 위해서 preHandler에서 사이트정보 불러와서 세팅을 한다.

* 현재 대쉬보드 어떤 메뉴를 통해 들어왔는지 표기해준다.

현재 대쉬보드 어떤 메뉴를 통해 들어왔는지 표기해준다.

* 대쉬보드 사용하지 않는 소스 정리 사이트 네임 & 사이트 아이디 세팅 preHandler로 이동

대쉬보드 사용하지 않는 소스 정리 사이트 네임 & 사이트 아이디 세팅 preHandler로 이동

* 컬럼 정보에 단위도 같이 병행 표기하도록 수정

컬럼 정보에 단위도 같이 병행 표기하도록 수정

Co-authored-by: Jaekeun <plutochild7@gamil.com>